# benchforge

./: .benchforge.toml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SECURITY.md  load_env.ps1  pyproject.toml  requirements.txt
.ai/: architecture.md  coding_rules.md  guardrails.md  known_issues.md  prompts.md  repo_brain.md  tasks.md
.ai/skills/benchforge-report-planner/: SKILL.md
.ai/skills/benchforge-report-planner/references/: refactoring-brief-template.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
benchforge/: __init__.py
benchforge/ai/: __init__.py  interpreter.py
benchforge/cli/: main.py
benchforge/core/: __init__.py  analyzer.py  badge.py  benchmark.py  challenge.py  ci_guard.py  comparator.py  config.py  heatmap.py  pr_guard.py  roast.py  scanner.py  scoring.py
benchforge/plugins/: __init__.py  base.py
benchforge/plugins/python/: __init__.py  plugin.py
benchforge/report/: html_report.py
benchforge/report/templates/: report.html.j2
docs/: ci_integration.md  design_rulebook.md  plugin_guide.md  roadmap.md  scoring.md
tests/: conftest.py  test_ai_interpreter.py  test_analyzer.py  test_badge.py  test_benchmark.py  test_challenge.py  test_ci.py  test_cli.py  test_comparator.py  test_config.py  test_heatmap.py  test_html_report.py  test_plugins.py  test_pr_guard.py  test_roast.py  test_scanner.py  test_scoring.py
tests/fixtures/: sample_clean.py  sample_issues.py
