[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchforge"
version = "0.1.0"
description = "CLI tool for benchmarking and code quality analysis in the AI coding era"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["benchmarking", "code-quality", "static-analysis", "cli", "vibecoder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "radon>=6.0",
    "jinja2>=3.1",
    "memory-profiler>=0.61",
]

[project.optional-dependencies]
ai = [
    "mistralai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
benchforge = "benchforge.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
